# w3l

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
dll/: CMakeLists.txt  config.cpp  config.h  debug.cpp  debug.h  dep.cpp  functions.cpp  functions.h  nodefaultlib.cpp  nodefaultlib.h  patches.h  safe-queue.hpp  w3l.ini  w3lh.c  w3lh.cpp  w3lh.h
dll/game/: LobbyInfo.h  PlayerInfoUpdater.h  globals.h  hook-handlers.cpp  hook-handlers.h  hooks.cpp  hooks.h  offsets.h  player-slot-helpers.cpp  player-slot-helpers.h  structures.h
dll/game/PlayerInfo/: DefaultPlayerInfo.h  LagabuseDotaPlayerInfo.h  PlayerInfo.h
dll_27a/: CMakeLists.txt  dep.cpp  dep.h  functions.cpp  nodefaultlib.cpp  nodefaultlib.h  w3lh.c  w3lh.cpp  w3lh.def  w3lh.h
exe/: CMakeLists.txt  resource.h  resource.rc  w3l.c  w3l.cpp
